fixed registration after update to Core release

--- a/src/Tesexam/Views/Shared/_LoginPartial.cshtml
+++ b/src/Tesexam/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Tesexam.Data.Infrastructure
 @using Tesexam.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
