added json converting

--- a/src/Tesexam/Views/Shared/_LoginPartial.cshtml
+++ b/src/Tesexam/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Tesexam.Data.Infrastructure
+@using Data.Infrastructure
 @using Tesexam.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
